<resources>
    <string name="app_name">Turismo_Vedra</string>
    <string name="turismoVedra">TURISMO VEDRA</string>
    <string name="logoVedra">logo Vedra</string>
    <string name="menuHamburguesa">menú hamburguesa</string>
    <string name="informacionTuristica">Información turística</string>
    <string name="informacionTuristica1">INFORMACIÓN TURÍSTICA</string>
    <string name="webVedra">www.concellodevedra.es</string>
    <string name="comoChegar">COMO LLEGAR</string>
    <string name="contacto">CONTACTO</string>
    <string name="mapaTuristico">MAPA TURÍSTICO</string>
    <string name="telefonosInteres">TELÉFONOS DE INTERÉS</string>
    <string name="distancia">Distancia</string>
    <string name="descargaPDFrutas">Descarga PDF Rutas de Senderismo </string>
    <string name="senderoLineal">Tipo de sendero: Lineal</string>
    <string name="senderoCircular">Tipo de sendero: Circular</string>
    <string name="duracion">Duración aproximada</string>
    <string name="duracionIda">Duración aproximada (ida)</string>
    <string name="dificultadeMedia">Dificultad: media</string>
    <string name="datosTecnicos">Datos técnicos</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="scroll_view">Scroll view</string>
    <string name="actividadesFuturas">Actividades futuras</string>
    <string name="textoRutas1">Caminar por el placer de conocer, recorrer caminos salpicados de historia, cultura, tradiciones... y moldeados por la fuerza de la naturaleza. Gozar del paisaje.
        \n\nComo pueden comprobar Vedra abre sus puertas de par en par al caminante, para mostrar una tierra cariñosa, sencilla, donde los senderos muestran la belleza y la diversidad del ayuntamiento.
        \n \n*Para equiparse hay que tener en cuenta la época del año en la que se hacen las rutas.</string>
    <string name="textoRutas2">Si continuamos nuestro recorrido, llegaremos al entorno de la Ferreira, y finalizaremos esta ruta en Ponte Busacos, punto más destacable por su valor histórico; por el transcurrió la IV Vía Militar romana que unía Brácara (Braga) e Astúrica (Astorga); y en la actualidad discurre la Vía de la Plata del Camino de Santiago.</string>
    <string name="textoRutas3">El inicio de este sendero se sitúa en la parroquia de Vedra, junto al puente de la carretera principal que atraviesa el río Pereiro. Se accede partiendo de la casa del Ayuntamiento en dirección a Illobre, a mitad de camino encontramos un panel de ruta (punto de partida).
        \n \nEsta ruta nos conduce paralelos al río Pereiro, y nos permite descubrir toda una serie de molinos, salpicados aquí y allá, alguno de ellos aún hoy en funcionamiento. A poucos Kilómetros río arriba localízase a fervenza do Pereiro que con su ruído rompe el silencio del paisaje.</string>
    <string name="textoRutas4">Además de conocer la cultura molinera, también podemos observar las tareas agrícolas en prados, huertos y viñedos.
        \n \nLa ruta nos lleva a través del bosque por estrechos caminos rodeados de vegetación y cascadas que con su melodía hacen más grato el caminar.</string>
    <string name="textoRutas5">El punto de partida se sitúa en la parroquia de San Pedro de Vilanova. Nos desviamos de la carretera N-525 Santiago-Ourense en dirección a la iglesia parroquial y, dejando atrás esta, giramos primero a la izquierda y después a la derecha, siguiendo las indicaciones viarias.
        \n \nEsta ruta nos muestra un conjunto etnográfico formado por varios molinos en buen estado de conservación que siguen el curso del río de Merín, acercandonos a una constante en el paisaje de Vedra que nos da idea de la importancia que la agricultura tuvo en la economía de nuestros antepasados, y del fuerte vínculo que liga por siempre esta tierra al agua.</string>
    <string name="textoRutas6">La primera parada a destacar es el casco tradicional del pueble de Ponte Ulla. A poca distancia nos encontramos en nuestro camino con un molino de singulares características, el molino de Reboredo, provisto de cinco muelas. \n \nLa siguiente parada será en el área de recreo de Agronovo, donde podremos descansar un rato para reponer fuerzas.
        \n \nContinuamos hasta llegar al área de recreo del Coto de Ximonde, un de los cotos de salmón más importantes de Galicia, convertido hoy en una estación ictiológica de cría y reproducción.
        \n \nMás adelante nos espera el área de recreo de Cubelas, que pone punto y final a este hermoso recorrido por el Ulla.</string>
    <string name="textoRutas7">Su inicio se localiza en el Mirador de Gundián, junto al puente del ferrocarril. Para llegar hasta el mirador se toma la salida de la carretera N-525 Santiago-Ourense en el lugar de Ponte Ulla.
        \n \nEl Mirador de Gundián está situado a unos 100 metros sobre el nivel del río, que permite una visión incomparable del Ulla estrechándose en el paso da Cova, bajo el puente del ferrocarril, y continuando luego su recorrido hasta perderse a lo lejos.
        \n \nEsta ruta discurre por el margen derecho del río Ulla aprovechando caminos de paso, sendas de pescadores y senderos ya marcados.</string>
    <string name="distanciaRutaPereiro">Distancia: 5 Km</string>
    <string name="inicioRutaPereiro">Inicio: Puente de Pereiro-Carretera \n42º 46.901´N 008º 29.500´W</string>
    <string name="finalizacionRutaPereiro">Finalización: Puente Busacos \n42º 48.861´N 008º 28.792´W</string>
    <string name="duracionRutaPereiro">2 h 15 min </string>
    <string name="nomeRutaPereiro">Ruta do Pereiro</string>
    <string name="distanciaRutaMolinos">Distancia: 2 Km</string>
    <string name="inicioRutaMolinos">Inicio: Área de Interpretación de los Molinos \n42º46.433´N 008º26.629´W</string>
    <string name="duracionRutaMolinos">1 h 10 min</string>
    <string name="nomeRutaMolinos">Ruta de los Molinos</string>
    <string name="distanciaRutaSanXoan">Distancia: 11,2 Km</string>
    <string name="inicioRutaSanXoan">Inicio: Mirador de Gundian \42º47.117´N 008º23.700´W</string>
    <string name="finalizacionRutaSanXoan">Finalización: Área de recreo de Cubelas \42º44.754´N 008º28.331´W</string>
    <string name="duracionRutaSanXoan">5 h 20 min</string>
    <string name="nomeRutaSanXoan">Ruta de San Xoán da Cova</string>
    <string name="textoInicio">Soy el Ayuntamiento de Vedra y estoy situado en el sur de la Provincia de A Coruña, en el corazón del Val do Ulla. Tengo una extensión de 53 Km2, con unos 5.100 habitantes distribuidos en 12 parroquias.
\n\nPasear por Vedra y por mis paisajes te sumerge en un espacio con personalidad propia. Hacer referencia a un solo lugar o monumento no es posible, todo yo soy un lugar que merece ser descubierto.
\n\nPor todo eso, y por mucho más…soy Vedra!</string>
    <string name="nonoPodesPerder">LO QUE NO TE PUEDES PERDER...</string>
    <string name="infoComoChegar">Para llegar hasta mí, tienes varias opciones:
        \n\nDesde Santiago de Compostela: coges a N-525 dirección Ourense y entras directamente en los límites del ayuntamiento.
\n\nLa N-525 Santiago-Ourense confluye en A Ponte Ulla con la AC-241 A Ponte Ulla – Pontevea\n\nTambién puedes acercarte por la autopista AP-53 Santiago-Ourense tomando la primera salida (Ribadulla: A Ponte Ulla, P.K. 14).
\n\nLas comunicaciones internas del concello transcurren a través de cómodas carreteras locales.
\n\nDos líneas de autobuses (de las empresas Monbús y Seoane) enlazan cada una de mis parroquias con SantiagoDúas liñas de autobuses (das empresas Monbús e Seoane) enlazan cada unha das miñas parroquias con Santiago.</string>
    <string name="distanciasKmPorEstrada">Distancias quilométricas por carretera:</string>
    <string name="santiago">Santiago de Compostela</string>
    <string name="pontevedra">Pontevedra</string>
    <string name="aCoruña">A Coruña</string>
    <string name="ourense">Ourense</string>
    <string name="vigo">Vigo</string>
    <string name="ferrol">Ferrol</string>
    <string name="lugo">Lugo</string>
    <string name="kmSantiago">16 Km</string>
    <string name="kmPontevedra">70 Km</string>
    <string name="kmCoruña">86 Km</string>
    <string name="kmOurense">92 Km</string>
    <string name="kmVigo">97 Km</string>
    <string name="kmFerrol">108 Km</string>
    <string name="kmLugo">115 Km</string>
    <string name="casaDosPeons">Centro de Dinamización y Promoción Municipal "Casa dos Peóns-Centro Visitantes"</string>
    <string name="direccionPeons">Picón nº2, San Pedro de Vilanova\nEstrada N-524, P.K. 326 –\n42º47.418´N 008º26.650´W</string>
    <string name="telefonoPeons">981512482 - 981814612</string>
    <string name="mailPeons">casadospeons@concellodevedra.com</string>
    <string name="oficinaPeregrinos">Oficina de Atención al Peregrino</string>
    <string name="direccionPeregrinos">Rectoral de A Ponte Ulla</string>
    <string name="telefonoPeregrinos">981512482 - 981814612</string>
    <string name="webPeregrinos">www.vedraturismo.com</string>
    <string name="concello">Ayuntamiento de Vedra</string>
    <string name="proteccionCivil">Protección Civil</string>
    <string name="guardiaCivil">Guardia Civil</string>
    <string name="emerxencias">Emergencias</string>
    <string name="centroDeSaude">Centro de Salud de Vedra</string>
    <string name="farmaciaVedra">Farmacia de Vedra</string>
    <string name="farmaciaSantaCruz">Farmacia de Santa Cruz</string>
    <string name="biblioteca">Biblioteca de Vedra</string>
    <string name="agenciaLectura">Agencia de Lectura de Santa Cruz</string>
    <string name="pabellon">Pabellón Municipal de Deportes</string>
    <string name="estacionDeServicio">Estación de servicio "Ponte Ulla"</string>
    <string name="estacionBusesSantiago">Estación de autobuses de Santiago</string>
    <string name="monbus">Monbús</string>
    <string name="seoane">Empresa de autocares Seoane</string>
    <string name="aeroporto">Aeropuerto de Lavacolla</string>
    <string name="estacionTren">Estación de tren de Santiago</string>
    <string name="taxi2">Taxi nº2</string>
    <string name="taxi3">Taxi nº3</string>
    <string name="taxi4">Taxi nº4</string>
    <string name="taxi10">Taxi nº10</string>
    <string name="concelloTelefono">981814612</string>
    <string name="proteccionCivilTelefono">629661685</string>
    <string name="guardiaCivilTelefono">981503051</string>
    <string name="emerxenciasTelefono">112</string>
    <string name="centroDeSaudeTelefono">981503111</string>
    <string name="farmaciaVedraTelefono">981503233</string>
    <string name="farmaciaSantaCruzTelefono">981512314</string>
    <string name="bibliotecaTelefono">981502262</string>
    <string name="agenciaLecturaTelefono">981512242</string>
    <string name="pabellonTelefono">981502290</string>
    <string name="estacionDeServicioTelefono">981512026</string>
    <string name="estacionBusesSantiagoTelefono">981542416</string>
    <string name="monbusTelefono">902292900</string>
    <string name="seoaneTelefono">981562832</string>
    <string name="aeroportoTelefono">981547500</string>
    <string name="estacionTrenTelefono">902240202</string>
    <string name="queFacer">QUÉ HACER</string>
    <string name="actividadesSociais">Actividades sociales y fiestas locales</string>
    <string name="festasGastronomicas">Fiestas gastronómicas</string>
    <string name="descargaAlquilerBici">Descarga PDF: Alquiler de bicicletas BTT</string>
    <string name="descargaPDFcicloturismo">Descarga PDF: Ruta cicloturística por el Val do Ulla</string>
    <string name="senderismo">Senderismo</string>
    <string name="pescaFluvial">Pesca fluvial</string>
    <string name="piraguismo">Piragüismo</string>
    <string name="cicloturismo">Cicloturismo</string>
    <string name="etnoturismo">Etnoturismo</string>
    <string name="ondeDurmir">DÓNDE DORMIR</string>
    <string name="ondeComer">DONDE COMER</string>
    <string name="queVer">QUÉ VER</string>
    <string name="produtoresLocais">PRODUCTORES LOCALES</string>
</resources>