<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativePrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal"
    android:padding="20dp">


    <ImageButton
        android:id="@+id/logoVedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/logoVedra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_concello_vedra"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/equis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#FFFFFF"
        android:contentDescription="equis"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/equis" />


    <TextView
        android:id="@+id/comoChegar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/comoChegar"
        android:textColor="@color/greenVedra"
        android:fontFamily="@font/abel"
        android:textSize="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="35dp"/>

    <TextView
        android:id="@+id/queVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comoChegar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/abel"
        android:text="@string/queVer"
        android:textColor="@color/greenVedra"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/queFacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/queVer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/abel"
        android:text="@string/queFacer"
        android:textColor="@color/greenVedra"
        android:textSize="24dp" />
    <TextView
        android:id="@+id/ondeComer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/queFacer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/abel"
        android:text="@string/ondeComer"
        android:textColor="@color/greenVedra"
        android:textSize="24dp" />
    <TextView
        android:id="@+id/ondeDurmir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ondeComer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/abel"
        android:text="@string/ondeDurmir"
        android:textColor="@color/greenVedra"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/productoresLocais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ondeDurmir"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/abel"
        android:text="@string/produtoresLocais"
        android:textColor="@color/greenVedra"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mapaTuristico"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/abel"
        android:text="@string/contacto"
        android:textColor="@color/greenVedra"
        android:textSize="24dp" />


    <TextView
        android:id="@+id/mapaTuristico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/telefonos"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/abel"
        android:text="@string/mapaTuristico"
        android:textColor="@color/greenVedra"
        android:textSize="24dp" />


    <TextView
        android:id="@+id/telefonos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvWebVedra"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/abel"
        android:text="@string/telefonosInteres"
        android:textColor="@color/greenVedra"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/tvInformacionTuristica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|bottom"
        android:layout_alignParentBottom="true"
        android:text="@string/informacionTuristica"
        android:textColor="@color/greenVedra" />

    <TextView
        android:id="@+id/tvWebVedra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end|bottom"
        android:text="@string/webVedra"
        android:textColor="@color/black" />



</RelativeLayout>