<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/relativePrincipal"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".quefacer.ActividadesDeportivas"
android:padding="20dp">


<ImageButton
    android:id="@+id/logoVedra"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="#FFFFFF"
    android:contentDescription="@string/logoVedra"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@mipmap/logo_concello_vedra"
    tools:ignore="TouchTargetSizeCheck" />

<ImageButton
    android:id="@+id/menuHamburguesa"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:background="#FFFFFF"
    android:contentDescription="@string/menuHamburguesa"
    android:minWidth="48dp"
    android:minHeight="48dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/menu_hamburguesa" />

<TextView
    android:id="@+id/tvActividadesSociais"
    android:layout_width="115dp"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="90dp"
    android:fontFamily="@font/abel"
    android:gravity="center_horizontal"
    android:text="@string/actividadesSociais"
    android:textColor="@color/greenVedra"
    android:textSize="24sp" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="140dp"
    android:contentDescription="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <ImageButton
            android:id="@+id/imgCicloturismo"
            style="@style/botonGrande"
            android:background="@color/white"
            android:contentDescription="@string/cicloturismo"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/cicloturismo" />

        <ImageButton
            android:id="@+id/imgPescaFluvial"
            style="@style/botonGrande"
            android:layout_below="@id/imgCicloturismo"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:contentDescription="@string/pescaFluvial"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/pescafluvial" />


        <ImageButton
            android:id="@+id/imgEtnoturismo"
            style="@style/botonGrande"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:contentDescription="@string/etnoturismo"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/etnoturismo" />


        <ImageButton
            android:id="@+id/imgPiraguismo"
            style="@style/botonGrande"
            android:layout_below="@id/imgEtnoturismo"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:contentDescription="@string/piraguismo"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/piraguismo" />


        <ImageButton
            android:id="@+id/imgSenderismo"
            style="@style/botonNegocio"
            android:layout_below="@id/imgPescaFluvial"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:contentDescription="@string/senderismo"
            android:foregroundGravity="left"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/sederismo"/>


        <TextView
            android:id="@+id/tvInformacionTuristica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgSenderismo"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="start|bottom"
            android:text="@string/informacionTuristica"
            android:textColor="@color/greenVedra" />

        <TextView
            android:id="@+id/tvWebVedra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/imgSenderismo"
            android:gravity="end|bottom"
            android:text="@string/webVedra"
            android:textColor="@color/black" />

    </RelativeLayout>

</ScrollView>


</RelativeLayout>