<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/relativePrincipal"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".quefacer.Cicloturismo"
android:padding="20dp">

<ImageButton
    android:id="@+id/logoVedra"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="#FFFFFF"
    android:contentDescription="@string/logoVedra"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@mipmap/logo_concello_vedra"
    tools:ignore="TouchTargetSizeCheck" />

<ImageButton
    android:id="@+id/menuHamburguesa"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:background="#FFFFFF"
    android:contentDescription="@string/menuHamburguesa"
    android:minWidth="48dp"
    android:minHeight="48dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/menu_hamburguesa" />

<TextView
    android:id="@+id/tvcicloturismo"
    android:layout_width="115dp"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="70dp"
    android:fontFamily="@font/abel"
    android:gravity="center_horizontal"
    android:text="@string/cicloturismo"
    android:textColor="@color/greenVedra"
    android:textSize="24sp" />


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="140dp">




    <ImageView
        android:id="@+id/imgCicloturismo"
        style="@style/botonNegocio"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="#00F1ECEC"
        android:contentDescription="@string/cicloturismo"
        android:scaleType="fitXY"
        android:src="@mipmap/rutabici" />


    <TextView
        android:id="@+id/tvPDFcicloturismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        android:layout_below="@id/imgCicloturismo"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/imgdescarga"
        android:text="@string/descargaPDFcicloturismo" />


    <TextView
        android:id="@+id/tvDescargaAluguerBici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvPDFcicloturismo"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/imgdescarga"
        android:text="@string/descargaAlquilerBici" />
    <TextView
        android:id="@+id/tvInformacionTuristica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvDescargaAluguerBici"
        android:gravity="start|bottom"
        android:text="@string/informacionTuristica"
        android:textColor="@color/greenVedra" />

    <TextView
        android:id="@+id/tvWebVedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tvDescargaAluguerBici"
        android:layout_alignParentBottom="true"
        android:gravity="end|bottom"
        android:text="@string/webVedra"
        android:textColor="@color/black" />
</RelativeLayout>



</RelativeLayout>