<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativePrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">


    <TextView
        android:id="@+id/textView"


    <ImageButton
        android:id="@+id/logoVedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/logoVedra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_concello_vedra"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/menuHamburguesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:background="#FFFFFF"
        android:contentDescription="@string/menuHamburguesa"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_hamburguesa" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/textoInicio"/>

            <TextView
                android:id="@+id/tvInformacionTuristica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:text="@string/informacionTuristica"
                android:layout_alignParentBottom="true"
                android:textColor="@color/greenVedra" />

            <TextView
                android:id="@+id/tvWebVedra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:layout_alignParentBottom="true"
                android:text="@string/webVedra"
                android:textColor="@color/black" />
        </RelativeLayout>

    </ScrollView>



    <Button
        android:id="@+id/btQueFacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queFacer"
        android:textColor="@color/greenVedra"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>

